--- a/client/src/components/Landing/ContactUs/FAQ/Accordion/Accordion.css
+++ b/client/src/components/Landing/ContactUs/FAQ/Accordion/Accordion.css
@@ -37,6 +37,7 @@
 }
 
 .accordion .accordion__answerShow {
+    overflow: hidden;
     max-height: 500px;
     transition: max-height 5s linear;
 }
