--- a/client/src/components/Landing/Footer/Footer.css
+++ b/client/src/components/Landing/Footer/Footer.css
@@ -1,7 +1,8 @@
 .footer {
     margin-top: 100px;
     height: 80vh;
-    background-color: rgba(var(--primary-dark), 0.85);
+    /* background-color: rgba(var(--primary-dark), 0.85); */
+    background-color: rgba(var(--primary-light), 1);
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
@@ -38,9 +39,9 @@
 .footer__contentWrapper h3 {
     color: rgba(var(--secondary-light), 1);
     font-weight: 500;
-    font-size: 1.8rem;
+    font-size: 2rem;
     letter-spacing: 1.5px;
-    margin-bottom: 25px;
+    margin-bottom: 30px;
 }
 
 .footer__contentWrapper {
@@ -113,7 +114,7 @@
 }
 
 .footer__copyright a {
-    color: rgba(var(--gradient-extra), 1);
+    color: rgba(var(--primary-dark), 1);
     font-weight: 700;
     letter-spacing: 2px;
     display: inline-block;
@@ -123,7 +124,7 @@
 }
 
 .footer__copyright a:hover {
-    border-color: rgba(var(--gradient-extra), 1);
+    border-color: rgba(var(--primary-dark), 1);
 }
 
 @keyframes animate-heart {
